Fix bug where club image didnt work on firefox

--- a/clubs/static/custom.css
+++ b/clubs/static/custom.css
@@ -595,3 +595,10 @@ a {
 .form-image-input{
   margin: 16px 0;
 }
+
+@-moz-document url-prefix() {
+  #crop-wrap {
+      display: flex;
+      justify-content: center;
+  }
+}
